add submit button

--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
                 <label class="input-label" for="comment">Any comments or suggestions?</label><br>
                 <textarea name="comments" id="comment-area" cols="30" rows="8" placeholder="Enter your comment here..."></textarea>
             </div>
+
+            <div class="input-wrapper">
+                <input id="submit" type="submit">
+            </div>
         </form>
     </div>
     
